// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jKJlTe caYhsE"
  >
    <table
      className="sc-eNQAEJ iwjJVR"
    >
      <tbody
        className="sc-kEYyzF gfWKdx"
      >
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            US
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            PL
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Warsaw
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            DE
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Berlin
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            FR
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Paris
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            ES
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Madird
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            —
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jKJlTe caYhsE"
  >
    <table
      className="sc-eNQAEJ iwjJVR"
    >
      <thead
        className="sc-hMqMXs cPxEnv"
      >
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <th
            className="sc-hSdWYo bVPaqx"
          >
            Code
          </th>
          <th
            className="sc-hSdWYo bVPaqx"
          >
            Capital
          </th>
          <th
            className="sc-hSdWYo bVPaqx"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kEYyzF gfWKdx"
      >
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            US
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            PL
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Warsaw
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            DE
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Berlin
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            FR
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Paris
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            ES
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Madird
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-iAyFgw doEQeL"
          >
            —
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jKJlTe caYhsE"
  >
    <table
      className="sc-eNQAEJ iwjJVR"
    >
      <thead
        className="sc-hMqMXs cPxEnv"
      >
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <th
            className="sc-hSdWYo bVPaqx"
          >
            #
          </th>
          <th
            className="sc-hSdWYo bVPaqx"
          >
            Code
          </th>
          <th
            className="sc-hSdWYo bVPaqx"
          >
            Capital
          </th>
          <th
            className="sc-hSdWYo bVPaqx"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kEYyzF gfWKdx"
      >
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-eHgmQL bKohxy"
          >
            1
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            US
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-eHgmQL bKohxy"
          >
            2
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            PL
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Warsaw
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-eHgmQL bKohxy"
          >
            3
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            DE
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Berlin
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-eHgmQL bKohxy"
          >
            4
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            FR
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Paris
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-eHgmQL bKohxy"
          >
            5
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            ES
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Madird
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kkGfuU cUVFUE"
        >
          <td
            className="sc-eHgmQL bKohxy"
          >
            6
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            —
          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-iAyFgw doEQeL"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
